fix: white strip on Swiper in Dark Mode

--- a/src/components/Swiper/Swiper.css
+++ b/src/components/Swiper/Swiper.css
@@ -17,7 +17,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  background-color: #fff;
+  background-color: transparent;
 }
 
 .swiper-slide img {
@@ -33,7 +33,7 @@
   position: absolute;
   z-index: 1;
   height: 25px;
-  background-color:#fff;
+  background-color: transparent;
   padding: 0;
 }
 
